--- a/app/views/admin/bulk_imports/index.html.haml
+++ b/app/views/admin/bulk_imports/index.html.haml
@@ -19,11 +19,15 @@
       %small
         = link_to "orgs view", organization_bulk_imports_path(organization_id: current_organization.to_param), class: "less-strong"
 
-= line_chart matching_bulk_imports.group_by_day(:created_at, range: 1.month.ago.midnight..Time.current).count
+= column_chart time_range_counts(collection: matching_bulk_imports), stacked: true, thousands: ",", defer: true
+
+= render partial: "/shared/period_select"
 
 %p
   = number_with_delimiter(@bulk_imports.total_count)
   = "matching bulk import".pluralize(@bulk_imports.total_count)
+  %em
+    = humanized_time_range(@time_range)
 
 = paginate @bulk_imports, views_prefix: 'admin'
 
