--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -13,15 +13,26 @@
       %li.nav-item
         - superusers_search_params = sortable_search_params.merge(search_superusers: !@search_superusers)
         = link_to "Superusers", admin_users_path(superusers_search_params), class: @search_superusers ? "nav-link active" : "nav-link"
+      %li.nav-item
+        = link_to "graph", admin_users_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
   - if current_organization.present?
     %p.subtitle
       #{link_to current_organization.name, admin_organization_path(current_organization.to_param)} Users
       %em.small
         = link_to "without organization", admin_users_path(sortable_search_params.except(:organization_id)), class: "gray-link"
-.row
+
+- if @render_chart
+  = column_chart time_range_counts(collection: matching_users), stacked: true, thousands: ",", defer: true
+
+.mt-2
+  = render partial: "/shared/period_select"
+
+.row.mt-4
   .col-md-5
-    %h4
-      #{number_with_delimiter(@users.total_count)} matching users
+    %p
+      #{number_with_delimiter(matching_users.count)} matching users
+      %em
+        = humanized_time_range(@time_range)
   .col-md-7
     = form_tag admin_users_path, method: :get, class: "form-inline" do
       = hidden_field_tag :sort, sort_column
