--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -117,7 +117,7 @@
               Address
             %td
               %small
-                = bike.address
+                = bike.registration_address
                 %span.only-dev-visible.ml-2
                   manual:
                   = bike.address_set_manually
