--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -25,6 +25,7 @@
             %li= active_link t(".api_documentation"), documentation_index_path
             %li= active_link t(".dev_resources"), dev_and_design_path
             %li= active_link t(".design_logos"), image_resources_path
+            %li= active_link t(".security"), security_path
             %li= active_link t(".bike_manufacturer_list"), manufacturers_path
             %li= active_link t(".stolen_bike_map"), "https://map.bikewise.org/"
 
