--- a/app/views/admin/invoices/index.html.haml
+++ b/app/views/admin/invoices/index.html.haml
@@ -16,8 +16,23 @@
         = link_to "active", admin_invoices_path(sortable_search_params.merge(query: "active")), class: "nav-link #{params[:query] == 'active' ? 'active' : ''}"
       %li.nav-item
         = link_to "inactive", admin_invoices_path(sortable_search_params.merge(query: "inactive")), class: "nav-link #{params[:query] == 'inactive' ? 'active' : ''}"
+
       %li.nav-item
-        = link_to "endless", admin_invoices_path(sortable_search_params.merge(search_endless: !@search_endless)), class: "nav-link #{@search_endless ? 'active' : ''}"
+        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@search_endless.present? ? "active" : "") }
+          = @search_endless.present? ? @search_endless.humanize : "endless-ness"
+        .dropdown-menu
+          - endless_only_active = params[:search_endless] == "endless_only"
+          = link_to "Endless only", admin_invoices_path(sortable_search_params.merge(search_endless: endless_only_active ? nil : "endless_only")), class: "dropdown-item #{endless_only_active ? 'active' : ''}"
+          - not_endless_active = params[:search_endless] == "not_endless"
+          = link_to "Not Endless", admin_invoices_path(sortable_search_params.merge(search_endless: not_endless_active ? nil : "not_endless")), class: "dropdown-item #{not_endless_active ? 'active' : ''}"
+
+      %li.nav-item
+        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (@time_range_column == 'created_at' ? '' : 'active') }
+          Matching time for #{humanized_time_range_column(@time_range_column) || "created"}
+        .dropdown-menu
+          = link_to "Matching time for created", admin_invoices_path(sortable_search_params.merge(time_range_column: "created_at")), class: "dropdown-item #{@time_range_column == 'created_at' ? 'active' : ''}"
+          = link_to "Matching time by subscription ended", admin_invoices_path(sortable_search_params.merge(time_range_column: "subscription_end_at")), class: "dropdown-item #{@time_range_column == 'subscription_end_at' ? 'active' : ''}"
+          = link_to "Matching time by subscription started", admin_invoices_path(sortable_search_params.merge(time_range_column: "subscription_start_at")), class: "dropdown-item #{@time_range_column == 'subscription_start_at' ? 'active' : ''}"
       %li.nav-item
         = link_to "graph", admin_invoices_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
 
