--- a/app/views/admin/organizations/invoices/_table.html.haml
+++ b/app/views/admin/organizations/invoices/_table.html.haml
@@ -64,7 +64,7 @@
               %span.convertTime
                 = l invoice.subscription_start_at, format: :convert_time
           %td
-            - if invoice.endless
+            - if invoice.endless?
               %small.less-strong endless
             - elsif invoice.subscription_end_at.present?
               %span.convertTime{ class: invoice.subscription_end_at < Time.current ? "text-danger" : "" }
