--- a/app/views/admin/organizations/invoices/edit.html.haml
+++ b/app/views/admin/organizations/invoices/edit.html.haml
@@ -63,7 +63,10 @@
           - else
             Expires:
         %td
-          - if @invoice.subscription_end_at.present?
+          - if @invoice.endless?
+            %span.text-warning Endless
+            (invoice never ends)
+          - elsif @invoice.subscription_end_at.present?
             %span.convertTime
               = l @invoice.subscription_end_at, format: :convert_time
 
