ooh, there is some display of this

--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -74,6 +74,8 @@
         %td.hidden-sm-cells
           %em
             = parking_notification.kind_humanized
+          - if parking_notification.unregistered_bike? && !parking_notification.bike.unregistered_parking_notification?
+            %small.d-block.text-warning Unregistered bike!
         %td.hidden-sm-cells
           = parking_notification.user&.display_name&.truncate(20)
         - unless skip_repeat
