--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -250,7 +250,7 @@
               Bike originally registered by an
               = link_to unregistered_parking_notification.kind_humanized.downcase, organization_parking_notification_path(unregistered_parking_notification, organization_id: unregistered_parking_notification.organization.to_param), class: "text-warning text-underline"
               notification
-            but was sent to a new owner, so is now a normal #{@bike.type} on Bike Index.
+            but was sent to a new owner, so is now a standard #{@bike.type} on Bike Index.
 
 
       - if @bike.impound_records.resolved.where(organization_id: passive_organization.id).any?
