--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -49,12 +49,15 @@
 
         - if params[:search_bike_id].present?
           for
-          - searched_bike = Bike.find_by_id(params[:search_bike_id])
+          - searched_bike = Bike.unscoped.find_by_id(params[:search_bike_id])
           - if searched_bike.present?
             = link_to searched_bike.title_string, bike_path(searched_bike)
           - else
             %em
               unknown bike ##{params[:search_bike_id]}
+          %em.less-strong
+            view notifications
+            = link_to "for all bikes", organization_parking_notifications_path(sortable_search_params.merge(search_bike_id: nil))
 
   .row.mt-2.mb-4
     .col-md-4.col-xs-6
@@ -66,7 +69,8 @@
         %span.number 0
         total matches
     .col-md-4.col-xs-12
-      .text-right
+      -# Hide the repeat notification interface because the checks don't display on mobile
+      .text-right.hidden-md-down
         %a.gray-link#toggleSendRepeat{ href: "#sendRepeatNotifications", data: { toggle: "collapse", target: "#sendRepeatNotifications" } }
           retrieve/send repeat notification
   .row.mt-2.mb-4
