--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -4,6 +4,7 @@
 - render_address ||= false
 - skip_multiselect ||= false
 - hide_status ||= false
+- skip_resolved ||= false
 
 - # TODO: add translations
 :css
@@ -26,10 +27,9 @@
       %th
         %small=t(".notification_number")
     %th.status-cell Status
-    %th
-      %small=t(".impounded")
-    %th
-      %small=t(".retrieved")
+    - unless skip_resolved
+      %th
+        %small=t(".resolved")
     - unless skip_multiselect
       %th.multiselect-cell.table-cell-check.collapse
         %a#selectAllSelector{ href: "#" }
@@ -47,7 +47,7 @@
           - unless skip_repeat
             - if parking_notification.repeat_number > 0
               %strong.extended-col-info
-                Notification ##{parking_notification.repeat_number}
+                Notification ##{parking_notification.notification_number}
           - unless skip_bike
             %span.extended-col-info.d-block
               = link_to organized_bike_text(parking_notification.bike), bike_path(parking_notification.bike, organization_id: current_organization.id)
@@ -55,13 +55,11 @@
             #{status_display(parking_notification.status)} status
           - if parking_notification.resolved_at.present?
             %strong.small.extended-col-info.d-block
-              Impounded:
-              %span.convertTime.preciseTime
-                = l(parking_notification.resolved_at, format: :convert_time)
-          - if parking_notification.resolved_at.present?
-            %strong.small.extended-col-info.d-block
-              Retrieved:
-              %span.convertTime.preciseTime
+              - if parking_notification.impounded?
+                Impounded:
+              - if parking_notification.retrieved?
+                Retrieved:
+              %small.convertTime.preciseTime
                 = l(parking_notification.resolved_at, format: :convert_time)
 
         - if render_address
@@ -82,14 +80,12 @@
               = parking_notification.notification_number
         %td.hidden-sm-cells.status-cell
           = status_display(parking_notification.status)
-        %td.hidden-sm-cells
-          - if parking_notification.resolved_at.present?
-            %span.convertTime.preciseTime
-              = l(parking_notification.resolved_at, format: :convert_time)
-        %td.hidden-sm-cells
-          - if parking_notification.resolved_at.present?
-            %span.convertTime.preciseTime
-              = l(parking_notification.resolved_at, format: :convert_time)
+        - unless skip_resolved
+          %td.hidden-sm-cells
+            - if parking_notification.resolved_at.present?
+              %span.convertTime.preciseTime
+                = l(parking_notification.resolved_at, format: :convert_time)
+
         - unless skip_multiselect
           %td.multiselect-cell.table-cell-check.collapse
             = check_box_tag "ids[#{parking_notification.id}]", parking_notification.id
