--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -28,7 +28,7 @@
       - else
         - if current_organization.appointment_functionality_enabled?
           %li.divider-below
-            = active_link t(".virtual_line"), organization_lines_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
+            = active_link t(".virtual_line"), organization_operate_lines_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
           %li.divider
         - on_bikes_path = controller_name == "bikes" && action_name == "index" # Because we want to ignore queries and stuff
         %li
