--- a/app/views/organized/parking_notifications/_show_details.html.haml
+++ b/app/views/organized/parking_notifications/_show_details.html.haml
@@ -32,28 +32,27 @@
                 This parking notification has been replaced by
                 = link_to "notification ##{@parking_notification.current_associated_notification.notification_number}", organization_parking_notification_path(@parking_notification.current_associated_notification, organization_id: current_organization.to_param)
             - elsif @parking_notification.impounded?
-              %strong.text-danger
+              %span.text-danger
                 This #{@bike.type} was impounded
               - unless viewing_impound_record
-                %ul
+                %br
+                %strong
                   - if !@parking_notification.impound_notification?
                     - impound_notification = @parking_notification.associated_notifications.impound_notification.last
-                    %li
-                      View the
-                      = link_to "Impound notification", organization_parking_notification_path(impound_notification, organization_id: current_organization.to_param)
-                      %small
-                        %em
-                          created
-                          %span.convertTime.preciseTime
-                            = l(impound_notification.created_at, format: :convert_time)
-                        by #{impound_notification.user.display_name}
-                  %li
-                    - if @parking_notification.impound_record_id.present?
-                      View the
-                      = link_to "impound record", organization_impound_record_path(@parking_notification.impound_record&.display_id, organization_id: current_organization.to_param)
-                    - else
-                      %small.less-strong
-                        Impound record not found. Try reloading the page?
+                    View the
+                    = link_to "Impound notification", organization_parking_notification_path(impound_notification, organization_id: current_organization.to_param)
+                    %small
+                      %em
+                        created
+                        %span.convertTime.preciseTime
+                          = l(impound_notification.created_at, format: :convert_time)
+                      by #{impound_notification.user.display_name}
+                  - if @parking_notification.impound_record_id.present?
+                    View the
+                    = link_to "impound record", organization_impound_record_path(@parking_notification.impound_record&.display_id, organization_id: current_organization.to_param)
+                  - else
+                    %small.less-strong
+                      Impound record not found. Try reloading the page?
             - elsif @parking_notification.retrieved?
               %span.text-warning
                 This #{@bike.type} has been retrieved!
