--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -48,7 +48,7 @@
                 - if passive_organization.appointment_functionality_enabled?
                   = active_link t(".virtual_line"), organization_lines_path(organization_id: passive_organization.to_param), class: "nav-link", match_controller: true
                   %li.divider-nav-item
-                - on_bikes_path = controller_name == "bikes" && action_name == "index" # Because we want to ignore queries and stuff
+                - on_bikes_path = controller_name == "bikes" && action_name == "index" && params[:organization_id].present? # Because we want to ignore queries and stuff
                 %li
                   = link_to t(".org_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param), class: "nav-link #{on_bikes_path ? 'active' : ''}"
                 - if passive_organization.enabled?("impound_bikes")
