--- a/app/views/shared/_modal.html.haml
+++ b/app/views/shared/_modal.html.haml
@@ -9,7 +9,7 @@
     .modal-content
       - if title
         .modal-header
-          %h2.modal-title
+          %h2.modal-title.uncap
             = title
             %button.close{ 'aria-label' => 'Close', 'data-dismiss' => 'modal', type: 'button' }
               %span{ 'aria-hidden' => 'true' }
