--- a/app/views/admin/organizations/invoices/edit.html.haml
+++ b/app/views/admin/organizations/invoices/edit.html.haml
@@ -38,8 +38,8 @@
           %ul
             - @invoice.payments.each do |payment|
               %li
-                = link_to "#{payment.amount_formatted} on", admin_payment_path(payment)
-                %span.convertTime
+                = link_to "#{payment.amount_formatted}", admin_payment_path(payment)
+                %span.convertTime.withPreposition
                   = l payment.created_at, format: :convert_time
   .col-sm-6
     %table.table-list
@@ -67,7 +67,7 @@
             %span.text-warning Endless
             (invoice never ends)
           - elsif @invoice.subscription_end_at.present?
-            %span.convertTime
+            %span.convertTime.preciseTimeSeconds
               = l @invoice.subscription_end_at, format: :convert_time
 
 
